# hot-iron-oxide

./: .gitignore  Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  loggable_protocol.rs  metric.rs
src/chained/: chained_decision_tree.rs  loggable_protocol.rs  metrics.rs  mod.rs
src/chained/messages/: mod.rs
src/chained/messages/serialize/: mod.rs
src/chained/proof/: mod.rs
src/chained/protocol/: mod.rs
src/chained/protocol/decision/: mod.rs
src/chained/protocol/log/: mod.rs
src/chained/protocol/msg_queue/: mod.rs
src/config/: mod.rs
src/crypto/: mod.rs
src/crypto/test/: mod.rs
src/decision_tree/: mod.rs
src/decisions/: hotstuff.rs  mod.rs
src/decisions/decision/: mod.rs
src/decisions/decision/test/: mod.rs
src/decisions/log/: mod.rs
src/decisions/msg_queue/: mod.rs
src/decisions/proof/: mod.rs
src/decisions/req_aggr/: mod.rs
src/hot_iron/: loggable_protocol.rs  metric.rs  mod.rs
src/hot_iron/messages/: mod.rs
src/hot_iron/messages/serialize/: mod.rs
src/hot_iron/protocol/: hotstuff.rs  mod.rs
src/hot_iron/protocol/decision/: mod.rs
src/hot_iron/protocol/decision/test/: mod.rs
src/hot_iron/protocol/log/: mod.rs
src/hot_iron/protocol/msg_queue/: mod.rs
src/hot_iron/protocol/proof/: mod.rs
src/messages/: mod.rs  msg_builder.rs
src/messages/serialize/: mod.rs
src/protocol/: hotstuff.rs  mod.rs
src/protocol/decision/: mod.rs
src/protocol/decision/test/: mod.rs
src/protocol/log/: mod.rs
src/protocol/messages/: mod.rs
src/protocol/messages/serialize/: mod.rs
src/protocol/msg_queue/: mod.rs
src/protocol/proof/: mod.rs
src/protocol/req_aggr/: mod.rs
src/request_provider/: mod.rs
src/serialize/: mod.rs
src/view/: leader_allocation.rs  mod.rs  serialization.rs
tests/: mod.rs
