[package]
name = "hot-iron-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["serde", "atlas-common/serialize_serde", "atlas-core/serialize_serde", "atlas-communication/serialize_serde"]

default = ["serialize_serde"]

[dependencies]
atlas-common = { path = "../Atlas/Atlas-Common" }
atlas-core = { path = "../Atlas/Atlas-Core" }
atlas-communication = { path = "../Atlas/Atlas-Communication" }

getset = "*"
anyhow = "1.0"
thiserror = "2"
lazy_static = "*"

tracing = "*"
either = "*"
serde = { version = "1.0.216", features = ["derive"], optional = true }
rand = "0.8.5"