[package]
name = "hot-iron-oxide"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]

serialize_serde = ["atlas-common/serialize_serde", "atlas-core/serialize_serde", "atlas-communication/serialize_serde"]

default = ["serialize_serde"]

[dependencies]
atlas-common = { path = "../Atlas/Atlas-Common" }
atlas-core = { path = "../Atlas/Atlas-Core" }
atlas-communication = { path = "../Atlas/Atlas-Communication" }
atlas-metrics = { path = "../Atlas/Atlas-Metrics" }

getset = { version = "0" }
anyhow = "1.0"
thiserror = "2"
lazy_static = "1"

tracing = "0"
either = "1"
serde = { version = "1", features = ["derive"] }
bincode = {version = "2", features = ["default"]}
derive_more = { version = "*" , features = ["display"]}

strum = {version = "*", features = ["derive"]}
enum-map = "*"